<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reach_policy</name>
  <version>0.0.0</version>
  <description>ROS 2 package for running a deep reinforcement learning policy for robot reaching tasks.</description>
  <maintainer email="tfoldi@xsi.hu">tfoldi</maintainer>
  <license>Apache-2.0</license>

  <!-- Core ROS 2 dependencies -->
  <depend>rclpy</depend>
  <!-- Message dependencies used by the policy runner node -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>python3-numpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
